--- a/Advanced Math Calculator/functionPage.xaml
+++ b/Advanced Math Calculator/functionPage.xaml
@@ -18,13 +18,14 @@
                 <RowDefinition Height ="20"/>
 
             </Grid.RowDefinitions>
+            <!--inputs-->
             <TextBox x:Name="equation"  Grid.Row="1" HorizontalAlignment="Stretch" Margin="57,11,66,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="45" Width="auto" FontSize="25" TextChanging="equation_TextChanging" Grid.ColumnSpan="2" TextChanged="equation_TextChanged"/>
             <Button x:Name="go" Content="GO!" Grid.Row="1" HorizontalAlignment="Right" Margin="0,11,7,0" VerticalAlignment="Top" Click="go_Click" Height="45" Width="54" Grid.Column="1"/>
-            <TextBlock x:Name="output" Grid.Row="2" HorizontalAlignment="Center"  TextWrapping="Wrap" VerticalAlignment="Center" Text="" FontSize="30" Grid.Column="1" />
             <TextBlock x:Name="yequals"  Grid.Row="1" HorizontalAlignment="Left" Height="34" Margin="21,15,0,0" TextWrapping="Wrap" Text="Y=" VerticalAlignment="Top" Width="33" FontSize="25"/>
             <TextBox x:Name="xvalue" Grid.Row="1"  HorizontalAlignment="Left" Height="45" Margin="57,59,0,0" TextWrapping="Wrap" Text="3" VerticalAlignment="Top" Width="107" FontSize="25" TextChanging="xvalue_TextChanging" Grid.ColumnSpan="2"/>
             <TextBlock x:Name="xequals"  Grid.Row="1" HorizontalAlignment="Left" Height="34" Margin="22,60,0,0" TextWrapping="Wrap" Text="X=" VerticalAlignment="Top" Width="32" FontSize="25"/>
-
+            <!--output-->
+            <TextBlock x:Name="output" Grid.Row="2" HorizontalAlignment="Center"  TextWrapping="Wrap" VerticalAlignment="Center" Text="" FontSize="30" Grid.Column="1" />
             <!--settings-->
             <TextBlock x:Name="settings" HorizontalAlignment="Left" Margin="10,7.667,0,0" Grid.Row="3" TextWrapping="Wrap" Text="Settings" VerticalAlignment="Top" FontSize="32" Grid.ColumnSpan="2"/>
             <ToggleSwitch x:Name="parenthesis_assist" Grid.Row="3" Header="Parenthesis Assist" HorizontalAlignment="Left" Margin="10,54.667,0,0" VerticalAlignment="Top" IsOn="True" OnContent="On" OffContent="Off" FontSize="22" Grid.ColumnSpan="2"/>
