--- a/Advanced Math Calculator/functionPage.xaml
+++ b/Advanced Math Calculator/functionPage.xaml
@@ -7,8 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid Background="#FF232323" RequestedTheme="Dark">
+    <Grid Background="#FF232323">
+        <Grid  RequestedTheme="Dark">
 
             <Grid.RowDefinitions >
                 <RowDefinition Height ="50"/>
