--- a/Advanced Math Calculator/polarToRectangularPage.xaml
+++ b/Advanced Math Calculator/polarToRectangularPage.xaml
@@ -3,39 +3,112 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Advanced_Math_Calculator"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="#FF232323" RequestedTheme="Dark">
-        <ComboBox x:Name="inputType1" HorizontalAlignment="Left" Margin="259,134,0,0" VerticalAlignment="Top" Width="120" Header="Input Type" SelectedIndex="0" SelectionChanged="inputType1_SelectionChanged">
-            <ComboBoxItem x:Name="polarBox" Content="Rolar" Tapped="polarBox_Tapped"></ComboBoxItem>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
+        <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+
+        <!--Input 1-->
+        <ComboBox x:Name="inputType1" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="120" Header="Input Type" SelectedIndex="0" >
             <ComboBoxItem x:Name="rectangleBox" Content="Rectancular" Tapped="rectangleBox_Tapped"></ComboBoxItem>
+            <ComboBoxItem x:Name="polarBox" Content="Polar" Tapped="polarBox_Tapped"></ComboBoxItem>
         </ComboBox>
-        <ComboBox x:Name="inputType2" HorizontalAlignment="Left" Margin="259,236,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="0">
-            <ComboBoxItem Content="Rolar"></ComboBoxItem>
-            <ComboBoxItem Content="Rectancular"></ComboBoxItem>
-        </ComboBox>
-    <!--Input 1-->
-        <TextBlock x:Name="typeTitle11" HorizontalAlignment="Left" Margin="93,137,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top"/>
-        <TextBlock x:Name="typeTitle12" HorizontalAlignment="Left" Margin="189,137,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top"/>
-        <TextBox x:Name="input11" HorizontalAlignment="Left" Margin="67,162,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <TextBox x:Name="input12" HorizontalAlignment="Left" Margin="160,162,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <TextBlock x:Name="typeTitle11" Grid.Column="1" HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top"/>
+        <TextBlock x:Name="typeTitle12" Grid.Column="2" HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top"/>
+        <TextBox x:Name="input11" Grid.Column="1" Margin="11,40,10,0" TextWrapping="Wrap" VerticalAlignment="Top" TextChanged="inputsChange"/>
+        <TextBox x:Name="input12" Grid.Column="2" VerticalAlignment="Bottom" TextWrapping="Wrap"  TextChanged="inputsChange" Margin="10,0" Grid.Row="0"/>
 
         <!--Input 2-->
-        <TextBlock x:Name="typeTitle21" HorizontalAlignment="Left" Margin="93,211,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top"/>
-        <TextBlock x:Name="typeTitle22" HorizontalAlignment="Left" Margin="189,211,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top"/>
-        <TextBox x:Name="input21" HorizontalAlignment="Left" Margin="67,236,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-        <TextBox x:Name="input22" HorizontalAlignment="Left" Margin="160,236,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
 
+        <TextBlock x:Name="typeTitle21" Grid.Column="1" Grid.Row ="1" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="X" VerticalAlignment="Top" Margin="0,4,0,0" />
+        <TextBlock x:Name="typeTitle22" Grid.Column="2" Grid.Row ="1" HorizontalAlignment="Center" Margin="0,5,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" RenderTransformOrigin="0.825,0.51" />
 
-
-        <ComboBox x:Name="operandselection" HorizontalAlignment="Left" Margin="10,286,0,0" VerticalAlignment="Top" Width="36" Height="27" SelectedIndex="0">
-            <ComboBoxItem x:Name="add" Content="+"></ComboBoxItem>
-            <ComboBoxItem x:Name="sub" Content="-"></ComboBoxItem>
-            <ComboBoxItem x:Name="multi" Content="/"></ComboBoxItem>
-            <ComboBoxItem x:Name="divide" Content="*"></ComboBoxItem>
+        <TextBox x:Name="input21" Grid.Column="1" Grid.Row ="1" TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="inputsChange" Margin="10,31.4,10,0"/>
+        <TextBox x:Name="input22" Grid.Column="2" Grid.Row ="1"  TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="inputsChange" Margin="10,31.4,10,0" />
+        <ComboBox x:Name="inputType2" Grid.Column="3" Grid.Row ="1" HorizontalAlignment="Left" Margin="0,31,0,0"  VerticalAlignment="Top" Width="120" SelectedIndex="0" Grid.RowSpan="2">
+            <ComboBoxItem x:Name="rectangleBox2"  Content="Rectancular" Tapped="rectangleBox2_Tapped"></ComboBoxItem>
+            <ComboBoxItem x:Name="polarBox2"  Content="Polar" Tapped="polarBox2_Tapped"></ComboBoxItem>
         </ComboBox>
+
+
+        <!--Operands-->
+        <ComboBox x:Name="operandselection" Grid.Column="0" Grid.Row ="2" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="36" Height="27" SelectedIndex="0">
+            <ComboBoxItem x:Name="add"   Content="+" Tapped="operandPressed"></ComboBoxItem>
+            <ComboBoxItem x:Name="sub" Content="-" Tapped="operandPressed"></ComboBoxItem>
+            <ComboBoxItem x:Name="multi" Content="/" Tapped="operandPressed"></ComboBoxItem>
+            <ComboBoxItem x:Name="divide" Content="*" Tapped="operandPressed"></ComboBoxItem>
+        </ComboBox>
+
+
+        <!--Results-->
+
+
+        <TextBlock x:Name="typeTitle32" Grid.Column="2" Grid.Row="3"  HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" SelectionChanged="textBlock_SelectionChanged_1"/>
+        <TextBlock x:Name="typeTitle31" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top" SelectionChanged="textBlock_SelectionChanged_1"/>
+
+
+        <TextBox x:Name="resultX" Grid.Column="1" Grid.Row="3" IsReadOnly="True"  TextWrapping="Wrap"  VerticalAlignment="Top" Margin="10,20,10,0"/>
+        <TextBox x:Name="resultY"  Grid.Column="2" Grid.Row="3" IsReadOnly="True" TextWrapping="Wrap"  VerticalAlignment="Top" Margin="10,20,10,0"/>
+        <ComboBox x:Name="resultBox" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="120" SelectedIndex="0">
+            <ComboBoxItem x:Name="rectangleBox3" Content="Rectancular" Tapped="rectangleBox3_Tapped"></ComboBoxItem>
+            <ComboBoxItem x:Name="polarBox3" Content="Polar" Tapped="polarBox3_Tapped"></ComboBoxItem>
+        </ComboBox>
+
+
+
+            
+
+        </Grid>
+
+        <Grid VerticalAlignment="Center"
+                HorizontalAlignment="Center" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"></ColumnDefinition>
+                <ColumnDefinition Width="250"></ColumnDefinition>
+                <ColumnDefinition Width="50"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <controls:RadialGauge 
+               
+                  x:Name="RadialGauge"
+                  Grid.Column="1"
+                  Value="38"
+                  Minimum="0"
+                  Maximum="360"
+                  StepSize="1"
+                  IsInteractive="False"
+                  TickSpacing="90"
+                  ScaleWidth="21"
+                  MinAngle="0"
+                  MaxAngle="360"
+                  Unit=""
+                  TickBrush="Gainsboro"
+                  ScaleTickBrush="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+                  UnitBrush="Black"
+                  ValueBrush="Black" 
+                  NeedleWidth="3" 
+                  TickLength="11" NeedleBrush="Black" TrailBrush="DarkGray" />
+        </Grid>
 
 
 
