--- a/Advanced Math Calculator/polarToRectangularPage.xaml
+++ b/Advanced Math Calculator/polarToRectangularPage.xaml
@@ -22,7 +22,7 @@
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -36,16 +36,16 @@
         </ComboBox>
         <TextBlock x:Name="typeTitle11" Grid.Column="1" HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top"/>
         <TextBlock x:Name="typeTitle12" Grid.Column="2" HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top"/>
-        <TextBox x:Name="input11" Grid.Column="1" Margin="11,40,10,0" TextWrapping="Wrap" VerticalAlignment="Top" TextChanged="inputsChange"/>
-        <TextBox x:Name="input12" Grid.Column="2" VerticalAlignment="Bottom" TextWrapping="Wrap"  TextChanged="inputsChange" Margin="10,0" Grid.Row="0"/>
+        <TextBox x:Name="input11" Grid.Column="1" Margin="11,40,10,0" TextWrapping="Wrap" VerticalAlignment="Top" TextChanged="inputsChange" TextChanging="input11_TextChanging"/>
+        <TextBox x:Name="input12" Grid.Column="2" VerticalAlignment="Bottom" TextWrapping="Wrap"  TextChanged="inputsChange" Margin="10,0" Grid.Row="0" TextChanging="input12_TextChanging"/>
 
         <!--Input 2-->
 
         <TextBlock x:Name="typeTitle21" Grid.Column="1" Grid.Row ="1" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="X" VerticalAlignment="Top" Margin="0,4,0,0" />
         <TextBlock x:Name="typeTitle22" Grid.Column="2" Grid.Row ="1" HorizontalAlignment="Center" Margin="0,5,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" RenderTransformOrigin="0.825,0.51" />
 
-        <TextBox x:Name="input21" Grid.Column="1" Grid.Row ="1" TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="inputsChange" Margin="10,31.4,10,0"/>
-        <TextBox x:Name="input22" Grid.Column="2" Grid.Row ="1"  TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="inputsChange" Margin="10,31.4,10,0" />
+        <TextBox x:Name="input21" Grid.Column="1" Grid.Row ="1" TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="inputsChange" Margin="10,31.4,10,0" TextChanging="input21_TextChanging"/>
+        <TextBox x:Name="input22" Grid.Column="2" Grid.Row ="1"  TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="inputsChange" Margin="10,31.4,10,0" TextChanging="input22_TextChanging" />
         <ComboBox x:Name="inputType2" Grid.Column="3" Grid.Row ="1" HorizontalAlignment="Left" Margin="0,31,0,0"  VerticalAlignment="Top" Width="120" SelectedIndex="0" Grid.RowSpan="2">
             <ComboBoxItem x:Name="rectangleBox2"  Content="Rectancular" Tapped="rectangleBox2_Tapped"></ComboBoxItem>
             <ComboBoxItem x:Name="polarBox2"  Content="Polar" Tapped="polarBox2_Tapped"></ComboBoxItem>
@@ -92,7 +92,7 @@
                
                   x:Name="RadialGauge"
                   Grid.Column="1"
-                  Value="38"
+                  Value="90"
                   Minimum="0"
                   Maximum="360"
                   StepSize="1"
