--- a/Advanced Math Calculator/polarToRectangularPage.xaml
+++ b/Advanced Math Calculator/polarToRectangularPage.xaml
@@ -64,8 +64,8 @@
             <!--Results-->
 
 
-            <TextBlock x:Name="typeTitle32" Grid.Column="2" Grid.Row="3"  HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" SelectionChanged="textBlock_SelectionChanged_1"/>
-            <TextBlock x:Name="typeTitle31" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top" SelectionChanged="textBlock_SelectionChanged_1"/>
+            <TextBlock x:Name="typeTitle32" Grid.Column="2" Grid.Row="3"  HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" />
+            <TextBlock x:Name="typeTitle31" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top"/>
 
 
             <TextBox x:Name="resultX" Grid.Column="1" Grid.Row="3" IsReadOnly="True"  TextWrapping="Wrap"  VerticalAlignment="Top" Margin="10,20,10,0"/>
