--- a/Advanced Math Calculator/polarToRectangularPage.xaml
+++ b/Advanced Math Calculator/polarToRectangularPage.xaml
@@ -10,50 +10,51 @@
 
     <Grid Background="#FF232323" RequestedTheme="Dark">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
 
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
-        <Grid>
+        <Grid Background="#FF444444">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="10.333"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="2*"/>
+                <RowDefinition Height="13"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
 
             <!--Input 1-->
-            <ComboBox x:Name="inputType1" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="120" Header="Input Type" SelectedIndex="0" >
+            <ComboBox x:Name="inputType1" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="120" Header="Input Type" SelectedIndex="0" FontSize="18" Height="71" >
                 <ComboBoxItem x:Name="rectangleBox" Content="Rectancular" Tapped="rectangleBox_Tapped"></ComboBoxItem>
                 <ComboBoxItem x:Name="polarBox" Content="Polar" Tapped="polarBox_Tapped"></ComboBoxItem>
             </ComboBox>
-            <TextBlock x:Name="typeTitle11" Grid.Column="1" HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top"/>
-            <TextBlock x:Name="typeTitle12" Grid.Column="2" HorizontalAlignment="Center" Margin="0,20,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top"/>
-            <TextBox x:Name="input11" Grid.Column="1" Margin="11,40,10,0" TextWrapping="Wrap" VerticalAlignment="Top" TextChanged="inputsChange" TextChanging="input11_TextChanging"/>
-            <TextBox x:Name="input12" Grid.Column="2" VerticalAlignment="Bottom" TextWrapping="Wrap"  TextChanged="inputsChange" Margin="10,0" Grid.Row="0" TextChanging="input12_TextChanging"/>
+            <TextBlock x:Name="typeTitle11" Grid.Column="1" HorizontalAlignment="Center" Margin="58,16,54,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top" Height="20" Width="12" FontSize="18"/>
+            <TextBlock x:Name="typeTitle12" Grid.Column="2" HorizontalAlignment="Center" Margin="58,15,55,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" Height="20" Width="11" FontSize="18"/>
+            <TextBox x:Name="input11" Grid.Column="1" Margin="11,40,5,0" TextWrapping="Wrap" VerticalAlignment="Top" TextChanged="inputsChange" TextChanging="input11_TextChanging" Height="32" FontSize="18"/>
+            <TextBox x:Name="input12" Grid.Column="2" VerticalAlignment="Bottom" TextWrapping="Wrap"  TextChanged="inputsChange" Margin="5,0,10,0" Grid.Row="0" TextChanging="input12_TextChanging" Height="32" FontSize="18"/>
 
             <!--Input 2-->
 
-            <TextBlock x:Name="typeTitle21" Grid.Column="1" Grid.Row ="1" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="X" VerticalAlignment="Top" Margin="0,4,0,0" />
-            <TextBlock x:Name="typeTitle22" Grid.Column="2" Grid.Row ="1" HorizontalAlignment="Center" Margin="0,5,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" RenderTransformOrigin="0.825,0.51" />
+            <TextBlock x:Name="typeTitle21" Grid.Column="1" Grid.Row ="1" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="X" VerticalAlignment="Top" Margin="58,6,54,0" Height="20" Width="12" FontSize="18" />
+            <TextBlock x:Name="typeTitle22" Grid.Column="2" Grid.Row ="1" HorizontalAlignment="Center" Margin="58,6,55,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" RenderTransformOrigin="0.825,0.51" Height="20" Width="11" FontSize="18" />
 
-            <TextBox x:Name="input21" Grid.Column="1" Grid.Row ="1" TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="inputsChange" Margin="10,31.4,10,0" TextChanging="input21_TextChanging"/>
-            <TextBox x:Name="input22" Grid.Column="2" Grid.Row ="1"  TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="inputsChange" Margin="10,31.4,10,0" TextChanging="input22_TextChanging" />
-            <ComboBox x:Name="inputType2" Grid.Column="3" Grid.Row ="1" HorizontalAlignment="Left" Margin="0,31,0,0"  VerticalAlignment="Top" Width="120" SelectedIndex="0" Grid.RowSpan="2">
+            <TextBox x:Name="input21" Grid.Column="1" Grid.Row ="1" TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="inputsChange" Margin="10,31,5,0" TextChanging="input21_TextChanging" Height="32" FontSize="18"/>
+            <TextBox x:Name="input22" Grid.Column="2" Grid.Row ="1"  TextWrapping="Wrap"  VerticalAlignment="Top" TextChanged="inputsChange" Margin="5,31,10,0" TextChanging="input22_TextChanging" Height="32" FontSize="18" />
+            <ComboBox x:Name="inputType2" Grid.Column="3" Grid.Row ="1" HorizontalAlignment="Left"   VerticalAlignment="bottom" Width="120" SelectedIndex="0" Height="39" FontSize="18" Margin="0,0,0,0.2">
                 <ComboBoxItem x:Name="rectangleBox2"  Content="Rectancular" Tapped="rectangleBox2_Tapped"></ComboBoxItem>
                 <ComboBoxItem x:Name="polarBox2"  Content="Polar" Tapped="polarBox2_Tapped"></ComboBoxItem>
             </ComboBox>
 
 
             <!--Operands-->
-            <ComboBox x:Name="operandselection" Grid.Column="0" Grid.Row ="2" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="36" Height="27" SelectedIndex="0">
+            <ComboBox x:Name="operandselection" Grid.Column="0" Grid.Row ="1" HorizontalAlignment="Left"  VerticalAlignment="Top"  Width="64" Height="38" SelectedIndex="0" Margin="0,63,0,0" FontSize="18" Grid.RowSpan="3"  >
                 <ComboBoxItem x:Name="add"   Content="+" Tapped="operandPressed"></ComboBoxItem>
                 <ComboBoxItem x:Name="sub" Content="-" Tapped="operandPressed"></ComboBoxItem>
                 <ComboBoxItem x:Name="multi" Content="/" Tapped="operandPressed"></ComboBoxItem>
@@ -62,15 +63,12 @@
 
 
             <!--Results-->
+            <TextBlock x:Name="typeTitle32" Grid.Column="2" Grid.Row="3"  HorizontalAlignment="Center" Margin="58,5.467,55,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" Height="20" Width="11" FontSize="18" />
+            <TextBlock x:Name="typeTitle31" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" Margin="58,5.467,54,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top" Height="20" Width="12" FontSize="18"/>
 
-
-            <TextBlock x:Name="typeTitle32" Grid.Column="2" Grid.Row="3"  HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="Y" VerticalAlignment="Top" />
-            <TextBlock x:Name="typeTitle31" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" Text="X" VerticalAlignment="Top"/>
-
-
-            <TextBox x:Name="resultX" Grid.Column="1" Grid.Row="3" IsReadOnly="True"  TextWrapping="Wrap"  VerticalAlignment="Top" Margin="10,20,10,0"/>
-            <TextBox x:Name="resultY"  Grid.Column="2" Grid.Row="3" IsReadOnly="True" TextWrapping="Wrap"  VerticalAlignment="Top" Margin="10,20,10,0"/>
-            <ComboBox x:Name="resultBox" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="120" SelectedIndex="0">
+            <TextBox x:Name="resultX" Grid.Column="1" Grid.Row="3" IsReadOnly="True"  TextWrapping="Wrap"  VerticalAlignment="Top" Margin="10,31,5,0" Height="32" FontSize="18"/>
+            <TextBox x:Name="resultY"  Grid.Column="2" Grid.Row="3" IsReadOnly="True" TextWrapping="Wrap"  VerticalAlignment="Top" Margin="5,31,10,0" Height="32" FontSize="18"/>
+            <ComboBox x:Name="resultBox" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Left"  VerticalAlignment="Bottom" Width="120" SelectedIndex="0" Height="39" FontSize="18">
                 <ComboBoxItem x:Name="rectangleBox3" Content="Rectancular" Tapped="rectangleBox3_Tapped"></ComboBoxItem>
                 <ComboBoxItem x:Name="polarBox3" Content="Polar" Tapped="polarBox3_Tapped"></ComboBoxItem>
             </ComboBox>
