--- a/Advanced Math Calculator/settingsPage.xaml
+++ b/Advanced Math Calculator/settingsPage.xaml
@@ -8,10 +8,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="Wheat">
-
-
-
-
+    <Grid x:Name="gridBackground" Background="#FF232323" RequestedTheme="Dark">
+        
+        <StackPanel Orientation="Vertical">
+            <RadioButton x:Name="lightButton" Content="Light" HorizontalAlignment="Left"  VerticalAlignment="Top" Checked="lightButton_Checked"/>
+            <RadioButton x:Name="darkButton" Content="Dark" HorizontalAlignment="Left"  VerticalAlignment="Top" IsChecked="True" Checked="darkButton_Checked"/>
+        </StackPanel>
     </Grid>
 </Page>
