--- a/Advanced Math Calculator/settingsPage.xaml
+++ b/Advanced Math Calculator/settingsPage.xaml
@@ -6,13 +6,22 @@
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    
+
     mc:Ignorable="d">
 
     <Grid x:Name="gridBackground" Background="#FF232323" RequestedTheme="Dark">
-        
         <StackPanel Orientation="Vertical">
             <RadioButton x:Name="lightButton" Content="Light" HorizontalAlignment="Left"  VerticalAlignment="Top" Checked="lightButton_Checked"/>
             <RadioButton x:Name="darkButton" Content="Dark" HorizontalAlignment="Left"  VerticalAlignment="Top" IsChecked="True" Checked="darkButton_Checked"/>
+
+
+
         </StackPanel>
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+
+
+        </ScrollViewer>
+
     </Grid>
 </Page>
