--- a/Advanced Math Calculator/MainPage.xaml
+++ b/Advanced Math Calculator/MainPage.xaml
@@ -32,10 +32,30 @@
                             <TextBlock x:Name="FunctionCalc" VerticalAlignment="Center" Text="Function Calculator" Foreground="White" FontSize="20" />
                         </StackPanel>
                     </ListBoxItem>
+                    <ListBoxItem x:Name="graphinCalc">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock x:Name="graphText"  Text="&#xE9D9;" FontFamily="Segoe MDL2 Assets"  Foreground="White" FontSize="29" RequestedTheme="Dark" Margin="0,0,5,0"  />
+                            <TextBlock x:Name="graphingcalculator" VerticalAlignment="Center" Text="Graphing Calculator" Foreground="White" FontSize="20" />
+                        </StackPanel>
+                    </ListBoxItem>
+                    
                     <ListBoxItem x:Name="polarRectangular">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock x:Name="polarShip"  Text="&#xE7E3;" FontFamily="Segoe MDL2 Assets"  Foreground="White" FontSize="29" RequestedTheme="Dark" Margin="0,0,5,0"  />
                             <TextBlock x:Name="polarRect" VerticalAlignment="Center" Text="Rolar/Rectangular" Foreground="White" FontSize="20" />
+                        </StackPanel>
+                    </ListBoxItem>
+                    <ListBoxItem x:Name="PrefixConversion">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock x:Name="prefixBars"  Text="&#xE14B;" FontFamily="Segoe MDL2 Assets"  Foreground="White" FontSize="29" RequestedTheme="Dark" Margin="0,0,5,0"  />
+                            <TextBlock x:Name="prefixconversion" VerticalAlignment="Center" Text="Prefix Conversion" Foreground="White" FontSize="20" />
+                        </StackPanel>
+                    </ListBoxItem>
+                    
+                    <ListBoxItem x:Name="BinaryHexOctal">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock x:Name="binary"  Text="10"   Foreground="White" FontSize="29" RequestedTheme="Dark" Margin="0,0,5,0"  />
+                            <TextBlock x:Name="binaryHex" VerticalAlignment="Center" Text="Binary/Hex/Octal" Foreground="White" FontSize="20" />
                         </StackPanel>
                     </ListBoxItem>
 
