--- a/Advanced Math Calculator/MainPage.xaml
+++ b/Advanced Math Calculator/MainPage.xaml
@@ -53,8 +53,8 @@
                     </ListBoxItem>
                     
                     <ListBoxItem x:Name="BinaryHexOctal">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock x:Name="binary"  Text="10"   Foreground="White" FontSize="29" RequestedTheme="Dark" Margin="0,0,5,0"  />
+                        <StackPanel Orientation="Horizontal" Height="33">
+                            <TextBlock x:Name="binary"  Text="10"   Foreground="White" FontSize="27" RequestedTheme="Dark" Margin="0,0,5,0"  />
                             <TextBlock x:Name="binaryHex" VerticalAlignment="Center" Text="Binary/Hex/Octal" Foreground="White" FontSize="20" />
                         </StackPanel>
                     </ListBoxItem>
